Fixed bug that caused limit, control, and drinking data to be shifted accross participants

--- a/notebooks/01_data_provider.ipynb
+++ b/notebooks/01_data_provider.ipynb
@@ -397,7 +397,7 @@
     "       'test002', 'test003', 'test004', 'test005', 'test01', 'test02',\n",
     "       'test03', 'test0722', 'test1', 'test34', 'test999', 'test2020',\n",
     "       'test20201', 'test345345', 'testt', 'test_10', 'test_11_26',\n",
-    "       'test_neu', 'xx956','050262', '050335', '050402', '050416', '051005', '294932', '891752080', '898922719', '898922899', '917702419', '01627712983', 'meow', 'test0022', 'test246', 'test5647', 'test22222', 'test41514', 'testtt', 'test_057', 'tets','898923271', 'test001', 'test006', 'test007', 'test008', 'test11', 'test_23_12', 'test_n','50744', 'test0001a', 'test004', 'test03', 'tets']\n",
+    "       'test_neu', 'xx956','050262', '050335', '050402', '050416', '051005', '294932', '891752080', '898922719', '898922899', '917702419', '01627712983', 'meow', 'test0022', 'test246', 'test5647', 'test22222', 'test41514', 'testtt', 'test_057', 'tets','898923271', 'test001', 'test006', 'test007', 'test008', 'test11', 'test_23_12', 'test_n','50744', 'test0001a', 'test004', 'test03', 'tets', 'test_neu', 'xx956','050262', '050335', '050402', '050416', '051005', '294932', '891752080', '898922719', '898922899', '917702419', '01627712983', 'meow', 'test0022', 'test246', 'test5647', 'test22222', 'test41514', 'testtt', 'test_057']\n",
     "    df = df[~df.participant_id.astype(str).isin(remove)]\n",
     "\n",
     "    bad_ids = df[~df.participant_id.apply(self.check_participant_id)].participant_id.unique()\n",
@@ -442,7 +442,7 @@
     "@patch\n",
     "@get_efficiently\n",
     "def get_ba_codebook(self:DataProvider):\n",
-    "    tables = pd.read_html(open(self.ba_codebook_path,\"r\").read())\n",
+    "    tables = pd.read_html(open(self.ba_codebook_path,\"r\", encoding ='UTF-8').read())\n",
     "    df = tables[1]\n",
     "    # Note that str.contains fills NaN values with nan, which can lead to strange results during filtering\n",
     "    df = df[df.LabelHinweistext.str.contains('Fragebogen:',na=False)==False]\n",
@@ -507,7 +507,7 @@
     "        df[new_id].fillna('nan',inplace = True)\n",
     "        df.loc[df[new_id].str.contains('nan'),new_id] = np.nan\n",
     "    # Removing test participants\n",
-    "    remove = ['050744', 'hdfghadgfh', 'LindaEngel', 'test', 'Test001', 'Test001a', 'test0011', 'test0012', 'test0013', 'test0014', 'test0015', 'test002', 'test00229', 'test007', 'test01', 'test012', 'test013', 'test1', 'test2', 'test4', 'test12', 'test999', 'test2021', 'test345345', 'testneu', 'testtest', 'test_0720', 'test_10', 'test_GA', 'Test_JH','test0016','891752080', 'pipingTest', 'test0001', 'test00012', 'test0012a', 'test0015a', 'test0017', 'test10', 'test20212', 'testJohn01', 'test_00213', 'test_00233', 'test_00271', 'test_003', 'test_004', 'test_11_26', 'Test_MS','898922899', 'tesst', 'test0002', 'test0908', 'test092384750398475', 'test43', 'test123', 'test1233', 'test3425', 'test123456', 'test1234567', 'testfu3', 'test_888', 'test_999', 'test_98375983745', 'Test_Übung','050335', 'test003', 'test02', 'test111', 'test1111', 'test1234','test0000', 'test_CH','50744', 'test0001a', 'test004', 'test03', 'tets']\n",
+    "    remove = ['050744', 'hdfghadgfh', 'LindaEngel', 'test', 'Test001', 'Test001a', 'test0011', 'test0012', 'test0013', 'test0014', 'test0015', 'test002', 'test00229', 'test007', 'test01', 'test012', 'test013', 'test1', 'test2', 'test4', 'test12', 'test999', 'test2021', 'test345345', 'testneu', 'testtest', 'test_0720', 'test_10', 'test_GA', 'Test_JH','test0016','891752080', 'pipingTest', 'test0001', 'test00012', 'test0012a', 'test0015a', 'test0017', 'test10', 'test20212', 'testJohn01', 'test_00213', 'test_00233', 'test_00271', 'test_003', 'test_004', 'test_11_26', 'Test_MS','898922899', 'tesst', 'test0002', 'test0908', 'test092384750398475', 'test43', 'test123', 'test1233', 'test3425', 'test123456', 'test1234567', 'testfu3', 'test_888', 'test_999', 'test_98375983745', 'Test_Übung','050335', 'test003', 'test02', 'test111', 'test1111', 'test1234','test0000', 'test_CH','50744', 'test0001a', 'test004', 'test03', 'tets','test009', 'test22', 'test912', 'test3003', 'test11111', 'test_MH']\n",
     "    df = df[~df.participant_id.astype(str).isin(remove)]\n",
     "    # Checking participant ids (to find new test participants)\n",
     "    bad_ids = df[~df.participant_id.apply(self.check_participant_id)].participant_id.unique()\n",
@@ -1633,7 +1633,8 @@
     "        del replace_dict[np.nan]\n",
     "    except:\n",
     "        pass\n",
-    "    del replace_dict[None]\n",
+    "    if None in replace_dict.keys():\n",
+    "        del replace_dict[None]\n",
     "    replace_dict['d033'] = 'd092' # This participant's data is currently missing in redcap, but they did change ID from 33 to 92\n",
     "    return replace_dict"
    ]
@@ -1725,7 +1726,7 @@
     "    ids_table.columns = ['redcap_id']\n",
     "    df = df.merge(ids_table, left_on='participant', right_index = True, how = 'left')\n",
     "    # Filtering out participants with no associated redcap data\n",
-    "    no_redcap = df.query(\"redcap_id.isna()\").participant.unique()\n",
+    "    no_redcap = df.query(\"redcap_id.isna()\", engine=\"python\").participant.unique()\n",
     "    print(\"Participants: %s have no associated redcap IDs and are excluded from the following analyses.\"%', '.join(no_redcap))\n",
     "    df = df[df.redcap_id.isna()==False]\n",
     "    return df"
@@ -2418,14 +2419,15 @@
     "        df = df.reindex(dates)\n",
     "        df.index.names = ['date']\n",
     "        df[['starting_date','sampling_day']] = df[['starting_date','sampling_day']].bfill().ffill()\n",
+    "        # 3) Shifting back retrospective answers\n",
+    "        df['drinks'] = df['drinks_gestern'].shift(-1) # Drinks yesterday get shifted back one day\n",
+    "        df['drinks'].fillna(df['drinks_vorgestern'].shift(-2), inplace = True) # Drinks before yesterday shift back two days\n",
+    "        df['limit'] = df.Limit.ffill(limit=8) # Limit gets repeated forward for eight days\n",
+    "        df['control'] = df.Kontrolle.bfill(limit=8) # Control is repeated backward for eight days\n",
     "        return df\n",
     "    df = df.set_index('date').groupby('participant').apply(add_missing_data).drop(columns='participant').reset_index()\n",
     "\n",
-    "    # 3) Shifting back retrospective answers\n",
-    "    df['drinks'] = df['drinks_gestern'].shift(-1) # Drinks yesterday get shifted back one day\n",
-    "    df['drinks'].fillna(df['drinks_vorgestern'].shift(-2), inplace = True) # Drinks before yesterday shift back two days\n",
-    "    df['limit'] = df.Limit.ffill(limit=8) # Limit gets repeated forward for eight days\n",
-    "    df['control'] = df.Kontrolle.bfill(limit=8) # Control is repeated backward for eight days\n",
+    "\n",
     "    # 4) Calculating daily alcohol consumption in grams\n",
     "    alc_dict = {\"Anzahl\"+k:v for k,v in self.get_alcohol_per_drink().set_index('drink')['ml_alc_per_drink'].to_dict().items()}\n",
     "    def calculate_g_alc(x):\n",
