--- a/notebooks/28_behavior_control_congruency.ipynb
+++ b/notebooks/28_behavior_control_congruency.ipynb
@@ -153,429 +153,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2283ce30-1338-49b5-9255-cf7e0c9d0384",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = two_day.query('participant==\"d170\" and (control==control)')[['date','control','Kontrolle']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9ea5072e-283f-4d17-b7fd-153adcdf8748",
+   "id": "33c630b3-dfc5-42aa-962b-0fec29ec2976",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>control</th>\n",
-       "      <th>Kontrolle</th>\n",
-       "      <th>date_shifted</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>two_day_index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>104349</th>\n",
-       "      <td>2022-01-08</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104350</th>\n",
-       "      <td>2022-01-09</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104351</th>\n",
-       "      <td>2022-01-10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104352</th>\n",
-       "      <td>2022-01-11</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104353</th>\n",
-       "      <td>2022-01-12</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104354</th>\n",
-       "      <td>2022-01-13</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104355</th>\n",
-       "      <td>2022-01-14</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104356</th>\n",
-       "      <td>2022-01-15</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104357</th>\n",
-       "      <td>2022-01-16</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2022-01-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104358</th>\n",
-       "      <td>2022-01-17</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104359</th>\n",
-       "      <td>2022-01-18</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104360</th>\n",
-       "      <td>2022-01-19</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104361</th>\n",
-       "      <td>2022-01-20</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104362</th>\n",
-       "      <td>2022-01-21</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104363</th>\n",
-       "      <td>2022-01-22</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104364</th>\n",
-       "      <td>2022-01-23</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104365</th>\n",
-       "      <td>2022-01-24</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2022-01-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104366</th>\n",
-       "      <td>2022-01-25</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104367</th>\n",
-       "      <td>2022-01-26</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104368</th>\n",
-       "      <td>2022-01-27</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104369</th>\n",
-       "      <td>2022-01-28</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104370</th>\n",
-       "      <td>2022-01-29</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104371</th>\n",
-       "      <td>2022-01-30</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-01-31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104372</th>\n",
-       "      <td>2022-01-31</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104373</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2022-02-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104375</th>\n",
-       "      <td>2022-02-03</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104376</th>\n",
-       "      <td>2022-02-04</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104377</th>\n",
-       "      <td>2022-02-05</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104378</th>\n",
-       "      <td>2022-02-06</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104379</th>\n",
-       "      <td>2022-02-07</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104380</th>\n",
-       "      <td>2022-02-08</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104381</th>\n",
-       "      <td>2022-02-09</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104382</th>\n",
-       "      <td>2022-02-10</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104383</th>\n",
-       "      <td>2022-02-11</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2022-02-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104384</th>\n",
-       "      <td>2022-02-12</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104385</th>\n",
-       "      <td>2022-02-13</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104386</th>\n",
-       "      <td>2022-02-14</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104387</th>\n",
-       "      <td>2022-02-15</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104388</th>\n",
-       "      <td>2022-02-16</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104389</th>\n",
-       "      <td>2022-02-17</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104390</th>\n",
-       "      <td>2022-02-18</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2022-02-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104391</th>\n",
-       "      <td>2022-02-19</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2023-01-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104713</th>\n",
-       "      <td>2023-01-07</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-01-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104714</th>\n",
-       "      <td>2023-01-08</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-01-09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104715</th>\n",
-       "      <td>2023-01-09</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-01-10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>104716</th>\n",
-       "      <td>2023-01-10</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                    date  control  Kontrolle date_shifted\n",
-       "two_day_index                                            \n",
-       "104349        2022-01-08      1.0        NaN   2022-01-09\n",
-       "104350        2022-01-09      1.0        NaN   2022-01-10\n",
-       "104351        2022-01-10      1.0        NaN   2022-01-11\n",
-       "104352        2022-01-11      1.0        NaN   2022-01-12\n",
-       "104353        2022-01-12      1.0        NaN   2022-01-13\n",
-       "104354        2022-01-13      1.0        NaN   2022-01-14\n",
-       "104355        2022-01-14      1.0        NaN   2022-01-15\n",
-       "104356        2022-01-15      1.0        NaN   2022-01-16\n",
-       "104357        2022-01-16      1.0        1.0   2022-01-17\n",
-       "104358        2022-01-17      1.0        NaN   2022-01-18\n",
-       "104359        2022-01-18      1.0        NaN   2022-01-19\n",
-       "104360        2022-01-19      1.0        NaN   2022-01-20\n",
-       "104361        2022-01-20      1.0        NaN   2022-01-21\n",
-       "104362        2022-01-21      1.0        NaN   2022-01-22\n",
-       "104363        2022-01-22      1.0        NaN   2022-01-23\n",
-       "104364        2022-01-23      1.0        NaN   2022-01-24\n",
-       "104365        2022-01-24      1.0        1.0   2022-01-25\n",
-       "104366        2022-01-25      2.0        NaN   2022-01-26\n",
-       "104367        2022-01-26      2.0        NaN   2022-01-27\n",
-       "104368        2022-01-27      2.0        NaN   2022-01-28\n",
-       "104369        2022-01-28      2.0        NaN   2022-01-29\n",
-       "104370        2022-01-29      2.0        NaN   2022-01-30\n",
-       "104371        2022-01-30      2.0        NaN   2022-01-31\n",
-       "104372        2022-01-31      2.0        NaN   2022-02-01\n",
-       "104373        2022-02-01      2.0        2.0   2022-02-03\n",
-       "104375        2022-02-03      3.0        NaN   2022-02-04\n",
-       "104376        2022-02-04      3.0        NaN   2022-02-05\n",
-       "104377        2022-02-05      3.0        NaN   2022-02-06\n",
-       "104378        2022-02-06      3.0        NaN   2022-02-07\n",
-       "104379        2022-02-07      3.0        NaN   2022-02-08\n",
-       "104380        2022-02-08      3.0        NaN   2022-02-09\n",
-       "104381        2022-02-09      3.0        NaN   2022-02-10\n",
-       "104382        2022-02-10      3.0        NaN   2022-02-11\n",
-       "104383        2022-02-11      3.0        3.0   2022-02-12\n",
-       "104384        2022-02-12      1.0        NaN   2022-02-13\n",
-       "104385        2022-02-13      1.0        NaN   2022-02-14\n",
-       "104386        2022-02-14      1.0        NaN   2022-02-15\n",
-       "104387        2022-02-15      1.0        NaN   2022-02-16\n",
-       "104388        2022-02-16      1.0        NaN   2022-02-17\n",
-       "104389        2022-02-17      1.0        NaN   2022-02-18\n",
-       "104390        2022-02-18      1.0        NaN   2022-02-19\n",
-       "104391        2022-02-19      1.0        1.0   2023-01-07\n",
-       "104713        2023-01-07      3.0        NaN   2023-01-08\n",
-       "104714        2023-01-08      3.0        NaN   2023-01-09\n",
-       "104715        2023-01-09      3.0        NaN   2023-01-10\n",
-       "104716        2023-01-10      3.0        NaN          NaT"
+       "False"
       ]
      },
      "execution_count": null,
@@ -584,8 +168,9 @@
     }
    ],
    "source": [
-    "test['date_shifted'] = test.date.shift(-1)\n",
-    "test"
+    "test = {}\n",
+    "test['test'] = 9\n",
+    "None in test.keys()"
    ]
   },
   {
